--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>区块链小白书</title>
+  <title>区块链小白书（JKR批注版）</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="让所有人都能轻松了解区块链">
   <meta name=”Keywords” Content=”区块链,比特币,数字货币,央行,人民币,美元,以太坊,mixin,eos,投资,投机,炒作,韭菜″>
